# jiffy

./: .gitignore  Cargo.toml
benches/: bench.rs  bounded.rs  unbounded.rs
src/: basic.rs  block.rs  block_mpsc.rs  idea.rs  lib.rs  lock_mpmc.rs  loo_ish.rs  ploo_mpsc.rs  protty.rs  protty_mpsc.rs  sema_mpsc.rs  sharded_lock_mpsc.rs  shared.rs  vyukov.rs
usync_mpsc/: Cargo.toml
usync_mpsc/src/: bounded.rs  lib.rs  rendezvous.rs  unbounded.rs
usync_mpsc/src/utils/: backoff.rs  cache_padded.rs  mod.rs  parker.rs  strict_provenance.rs
